Fixed alignment for the modal contents

--- a/styles/sass/partials/_modal.scss
+++ b/styles/sass/partials/_modal.scss
@@ -10,6 +10,8 @@
     border-radius: 1rem;
     box-shadow: 10px 5px 5px rgba(v.$color-secondary, .4);
     z-index: 300;
+    min-width: 320px;
+    padding: 3rem;
 
     h3{
         padding: 1rem 0;
@@ -17,18 +19,14 @@
     }
 
     i{
-        float: right;
-        padding: 1rem;
-        cursor: pointer;
-    }
-
-    &__content{
-        padding: 3rem 5rem 0;
+      position: absolute;
+      right: 20px;
+      top: 20px;
     }
 
     &__form{
-        margin: 0 auto;
-        padding: 3rem 0;
+        width: 100%;
+        margin: 3rem auto 0;
     }
     
     input {
